--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,5 @@
 //Layout
 @import "layout/global";
 @import "layout/navbar";
-@import "layout/destaque";
+@import "layout/cover";
+@import "layout/news";
