--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,13 +31,13 @@ body {
   -o-background-size: cover;
   background-size: cover; }
 
-.cover-inner .btn-primary {
+.btn-cover-primary {
   box-shadow: 0 3px 9px 0 rgba(41, 41, 51, 0.25); }
 
-.cover-inner .cover-title, .cover-inner .cover-text {
+.cover-title, .news-inner .news-title, .cover-text, .news-inner .news-text {
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
 
-.cover-inner .cover-title, .cover-inner .btn {
+.cover-title, .news-inner .news-title, .btn {
   margin: .8em 0; }
 
 body,
@@ -75,51 +75,75 @@ h6 {
   color: white;
   padding-top: 1rem; }
 
-.cover-container {
+.cover-container, .news-container {
   height: 100%;
   min-height: 40rem; }
 
 .cover-inner {
   margin-bottom: 3.5em; }
-  .cover-inner .cover-title {
-    font-size: 3.5em;
-    font-weight: 700; }
-  .cover-inner .cover-text {
-    margin-bottom: .8em;
-    font-size: 1.5em;
-    font-weight: 300;
-    line-height: 1.4167; }
-  .cover-inner .logo {
-    max-width: 25%; }
-  .cover-inner .btn {
-    box-sizing: border-box;
-    text-transform: uppercase;
-    color: white; }
-  .cover-inner .btn-primary {
-    padding: .5em 2em;
-    border-color: transparent;
-    border-radius: 0.15em;
-    background-color: #c24e4b;
-    font-size: 1.2em;
-    font-weight: bold;
-    line-height: 3em; }
-    .cover-inner .btn-primary:hover {
-      background-color: #a33a37; }
-  .cover-inner .btn-secondary {
-    margin-top: 1.5em;
-    padding: .5em 1.2em;
-    border-color: white;
-    border-radius: 0.1em;
-    background-color: transparent;
-    font-size: 1em;
-    line-height: 2.6em; }
-    .cover-inner .btn-secondary:hover {
-      opacity: 0.7;
-      color: black;
-      background-color: white; }
-  .cover-inner .cover-link {
-    text-decoration: underline;
+
+.cover-title, .news-inner .news-title {
+  font-size: 3.5em;
+  font-weight: 700; }
+
+.cover-text, .news-inner .news-text {
+  margin-bottom: .8em;
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.4167; }
+
+.btn {
+  box-sizing: border-box;
+  text-transform: uppercase;
+  color: white; }
+
+.btn-cover-primary {
+  padding: .5em 2em;
+  border-color: transparent;
+  border-radius: 0.15em;
+  background-color: #c24e4b;
+  font-size: 1.2em;
+  font-weight: bold;
+  line-height: 3em; }
+  .btn-cover-primary:hover {
+    color: white;
+    background-color: #a33a37; }
+
+.btn-cover-secondary, .news-inner .btn-news-primary {
+  margin-top: 1.5em;
+  padding: .5em 1.2em;
+  border-color: white;
+  border-radius: 0.1em;
+  background-color: transparent;
+  font-size: 1em;
+  line-height: 2.6em; }
+  .btn-cover-secondary:hover, .news-inner .btn-news-primary:hover {
+    opacity: 0.7;
+    color: black;
+    background-color: white; }
+
+.cover-link {
+  text-decoration: underline;
+  color: white; }
+  .cover-link:hover {
     color: white; }
 
 .news {
-  background: url("../img/patterns/zwartevilt.png") repeat; }
+  background: url("../img/patterns/zwartevilt.png") repeat;
+  min-height: 38rem; }
+
+.news-container {
+  min-height: 30rem; }
+
+.news-inner {
+  margin: 3em 50% 3em 0; }
+  .news-inner .news-title {
+    text-align: left; }
+  @media (max-width: 1024px) {
+    .news-inner {
+      margin-right: 0; }
+      .news-inner .news-title,
+      .news-inner .news-text {
+        text-align: center; }
+      .news-inner .btn-news-primary {
+        margin: 0 auto; } }
