--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -5,6 +5,7 @@
 $cor-padrao: rgb(26, 131, 230)
 $cor-auxiliar: rgb(17, 16, 26)
 $cor-branca: rgb(255, 255, 255)
+$cor-cinza: rgb(244,244,244);
 $cor-preta: rgb(0, 0, 0)
 
 // Fonts
