--- a/src/sass/_placeholders.sass
+++ b/src/sass/_placeholders.sass
@@ -1,7 +1,7 @@
 // Placeholders
 
 %heading-font
-    font-family: "Oswald", "Helvetica", "Arial", "sans-serif"
+    font-family: "Catamaran", "Helvetica", "Arial", "sans-serif"
     font-weight: 400
 
 %body-font
