--- a/src/sass/2-layouts/_products.sass
+++ b/src/sass/2-layouts/_products.sass
@@ -28,3 +28,8 @@
 
                     font-size: 1em
                     line-height: 1.2em
+
+.countup
+    min-height: 400px
+    background: transparent
+    color: $cor-branca
