--- a/src/sass/2-layouts/_cover.sass
+++ b/src/sass/2-layouts/_cover.sass
@@ -1,10 +1,11 @@
 .cover
-    +tintedImage($cor-auxiliar, 0.3, "../img/bg-cover.jpg")
+    +tintedImage($cor-padrao, 0.1, "../img/bg-cover.jpg")
+
     background-position: center
 
     @extend %background-cover
 
-    min-height: 48rem
+    min-height: 100vmin
     height: auto
     border-radius: 0
     color: $cor-branca
