--- a/src/css/app.css
+++ b/src/css/app.css
@@ -34,13 +34,13 @@ body {
 .btn-cover-primary, .card .card-body .btn-primary, .card {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-.cover-title, .news-inner .news-title, .products-container .products-inner .products-title, .countup-inner .countup-title, .cover-text, .news-inner .news-text, .countup-inner .countup-text, .news, .countup {
+.title, .subtitle, .news, .countup {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
 
-.cover-title, .news-inner .news-title, .products-container .products-inner .products-title, .countup-inner .countup-title, .btn {
+.btn {
   margin: 1.5em 0; }
 
-.countup-inner .item .item-icon {
+.item .item-icon {
   padding: 1.5em 0; }
 
 /* BASE STYLES */
@@ -64,15 +64,35 @@ h6 {
   display: none; }
 
 .color-primary {
-  color: #1e7aea;
-  font-weight: bold; }
+  color: #1e7aea; }
+
+.padding-bottom {
+  padding-bottom: 3em; }
+
+.no-space {
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 0;
+  padding-right: 0; }
+
+.title {
+  font-size: 3em;
+  font-weight: 700; }
+
+.subtitle {
+  font-size: 1.5em !important;
+  font-weight: 300 !important;
+  line-height: 1.4167 !important; }
+
+.title-block, .cover-title {
+  margin: 2em 0; }
 
 /* LAYOUTS */
 .navbar-trans {
   background-color: transparent; }
 
 .cover {
-  background-image: linear-gradient(rgba(30, 122, 234, 0.1), rgba(30, 122, 234, 0.1)), url("../img/bg-cover.jpg");
+  background-image: linear-gradient(rgba(30, 122, 234, 0.2), rgba(30, 122, 234, 0.2)), url("../img/smartphone-6.jpg");
   background-position: center;
   min-height: 100vmin;
   height: auto;
@@ -80,22 +100,9 @@ h6 {
   color: white;
   padding-top: 1rem; }
 
-.cover-container, .news-container, .products-container {
+.cover-container {
   height: 100%;
   min-height: 40rem; }
-
-.cover-inner, .products-container .products-inner, .countup-inner {
-  margin-bottom: 3.5em; }
-
-.cover-title, .news-inner .news-title, .products-container .products-inner .products-title, .countup-inner .countup-title {
-  font-size: 3.5em;
-  font-weight: 700; }
-
-.cover-text, .news-inner .news-text, .countup-inner .countup-text {
-  margin-bottom: 0.8em;
-  font-size: 1.5em;
-  font-weight: 300;
-  line-height: 1.4167; }
 
 .btn {
   box-sizing: border-box;
@@ -143,30 +150,26 @@ h6 {
   color: white; }
 
 .news-container {
+  height: 100%;
   min-height: 30rem; }
 
 .news-inner {
   margin: 3em 50% 3em 0; }
   .news-inner .news-title {
-    text-align: left; }
+    text-align: left;
+    margin-bottom: 2em; }
   @media (max-width: 1024px) {
     .news-inner {
       margin-right: 0; }
-      .news-inner .news-title,
-      .news-inner .news-text {
+      .news-inner .news-title {
         text-align: center; }
       .news-inner .btn-news-primary {
         margin: 0 auto; } }
 
 .products {
   background-color: #f4f4f4;
-  padding-top: 1rem;
   min-height: 38rem;
   height: auto; }
-
-.products-container .products-inner .products-title {
-  margin: 1em 0;
-  color: #1e7aea; }
 
 .card .card-body .card-text {
   min-height: 146px; }
@@ -177,23 +180,20 @@ h6 {
 
 .countup {
   background: rgba(30, 122, 234, 0.2);
+  padding-top: 1px;
   min-height: 500px;
   height: auto;
   color: white; }
 
-.countup-container {
+.container {
   height: 100%;
   min-height: 50vmin; }
 
-.countup-inner .countup-title {
-  margin: 0 auto;
-  padding: 0.5em 0; }
-
-.countup-inner .item {
+.item {
   padding: 1em auto; }
-  .countup-inner .item .item-icon {
+  .item .item-icon {
     font-size: 1.5em; }
-  .countup-inner .item .counter {
+  .item .counter {
     font-size: 2em; }
 
 footer {
