--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -4,9 +4,9 @@ html
     height: 100%
 
 body
-    overflow-x: hidden
-
     @extend %body-font
+
+    overflow-x: hidden
 
 h1,
 h2,
@@ -14,13 +14,37 @@ h3,
 h4,
 h5,
 h6
-    text-align: center
-
     @extend %heading-font
+
+    text-align: center
 
 .hidden
     display: none
 
 .color-primary
     color: $cor-padrao
-    font-weight: bold
+
+.padding-bottom
+    padding-bottom: 3em
+
+.no-space
+    margin-left: -15px
+    margin-right: -15px
+    padding-left: 0
+    padding-right: 0
+
+.title
+    @extend %text-shadow
+
+    font-size: 3em
+    font-weight: 700
+
+.subtitle
+    @extend %text-shadow
+
+    font-size: 1.5em !important
+    font-weight: 300 !important
+    line-height: 1.4167 !important
+
+.title-block
+    margin: 2em 0
