--- a/src/sass/2-layouts/_cover.sass
+++ b/src/sass/2-layouts/_cover.sass
@@ -1,5 +1,5 @@
 .cover
-    +tintedImage($cor-padrao, 0.1, "../img/bg-cover.jpg")
+    +tintedImage($cor-padrao, 0.2, "../img/smartphone-6.jpg")
 
     background-position: center
 
@@ -15,25 +15,8 @@
     height: 100%
     min-height: 40rem
 
-.cover-inner
-    margin-bottom: 3.5em
-
 .cover-title
-    @extend %margin-default
-
-    font-size: 3.5em
-    font-weight: 700
-
-    @extend %text-shadow
-
-.cover-text
-    margin-bottom: 0.8em
-
-    @extend %text-shadow
-
-    font-size: 1.5em
-    font-weight: 300
-    line-height: 1.4167
+    @extend .title-block
 
 .btn
     @extend %margin-default
