--- a/src/sass/2-layouts/_news.sass
+++ b/src/sass/2-layouts/_news.sass
@@ -10,20 +10,15 @@
     @extend %text-shadow
 
 .news-container
-    @extend .cover-container
-
+    height: 100%
     min-height: 30rem
 
 .news-inner
     margin: 3em 50% 3em 0
 
     .news-title
-        @extend .cover-title
-
         text-align: left
-
-    .news-text
-        @extend .cover-text
+        margin-bottom: 2em
 
     .btn-news-primary
         @extend .btn-cover-secondary
@@ -31,8 +26,7 @@
     @media (max-width: 1024px)
         margin-right: 0
 
-        .news-title,
-        .news-text
+        .news-title
             text-align: center
 
         .btn-news-primary
