--- a/src/css/app.css
+++ b/src/css/app.css
@@ -178,6 +178,11 @@ h6 {
   font-size: 1em;
   line-height: 1.2em; }
 
+@media screen and (max-width: 736px) {
+  .card {
+    margin-top: 15px;
+    margin-bottom: 15px; } }
+
 .countup {
   background: rgba(30, 122, 234, 0.2);
   padding-top: 1px;
