--- a/src/sass/2-layouts/_products.sass
+++ b/src/sass/2-layouts/_products.sass
@@ -15,3 +15,7 @@
 
             font-size: 1em
             line-height: 1.2em
+
+    @media screen and (max-width: 736px)
+        margin-top: 15px
+        margin-bottom: 15px
