--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -24,9 +24,6 @@ h6
 .color-primary
     color: $cor-padrao
 
-.padding-bottom
-    padding-bottom: 3em
-
 .no-space
     margin-left: -15px
     margin-right: -15px
@@ -47,4 +44,4 @@ h6
     line-height: 1.4167 !important
 
 .title-block
-    margin: 2em 0
+    margin: 2em auto
