--- a/src/sass/2-layouts/_products.sass
+++ b/src/sass/2-layouts/_products.sass
@@ -2,6 +2,7 @@
     background-color: $cor-cinza
     min-height: 38rem
     height: auto
+    padding-bottom: 3em
 
 .card
     @extend %box-shadow
