--- a/src/sass/2-layouts/_testimonial.sass
+++ b/src/sass/2-layouts/_testimonial.sass
@@ -6,30 +6,11 @@
 
     @extend %text-shadow
 
-.slider
-
-.slider-item
-    .col-left
-        width: 25%
-        float: left
-
-        img
-            margin-bottom: 15px
-
-    .col-right
-        width: 75%
-        float: right
-
-        p
-            margin: 0 auto
-            display: inline-block
-            vertical-align: middle
-            line-height: 30px
-            font-style: italic
-    
-    @media screen and (max-width: 768px)
-        .col-left
-            width: 100%
-
-        .col-right
-            width: 100%
+.owl-carousel
+    img
+        margin-bottom: 15px
+        max-width: 150px
+        max-height: 150px
+    p
+        font-style: italic
+        line-height: 30px
