--- a/src/sass/2-layouts/_layouts-dir.sass
+++ b/src/sass/2-layouts/_layouts-dir.sass
@@ -3,7 +3,7 @@
 @import "navbar"
 @import "cover"
 @import "news"
-@import "products"
+@import "services"
 @import "testimonial"
 @import "countup"
 @import "gallery"
