--- a/src/sass/2-layouts/_layouts-dir.sass
+++ b/src/sass/2-layouts/_layouts-dir.sass
@@ -4,6 +4,7 @@
 @import "cover"
 @import "news"
 @import "services"
+@import "features"
 @import "testimonial"
 @import "countup"
 @import "gallery"
