--- a/src/css/app.css
+++ b/src/css/app.css
@@ -34,7 +34,7 @@ body {
 .btn-cover-primary, .services {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
-.title, .subtitle, .news, .testimonial, .countup {
+.title, .subtitle, .news, .testimonial, .countup, .video {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
 
 .btn {
@@ -242,9 +242,8 @@ h6 {
   font-style: italic;
   line-height: 30px; }
 
-.countup {
+.countup, .video {
   background: rgba(30, 122, 234, 0.2);
-  padding-top: 1px;
   height: auto;
   color: white; }
 
@@ -266,6 +265,47 @@ h6 {
     .item {
       margin-top: 15px;
       margin-bottom: 15px; } }
+
+.video .btn-video {
+  background: rgba(255, 255, 255, 0);
+  min-width: 125px;
+  min-height: 125px;
+  border-radius: 50%;
+  border: 5px solid #1e7aea;
+  transition: all 0.2s linear; }
+  .video .btn-video i {
+    padding-left: 15px;
+    color: #1e7aea;
+    transition: all 0.2s linear; }
+  .video .btn-video:hover {
+    border-color: #0e4a94; }
+    .video .btn-video:hover i {
+      color: #0e4a94; }
+
+.modal-dialog {
+  max-width: 800px;
+  min-height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden; }
+  @media (max-width: 768px) {
+    .modal-dialog {
+      min-height: calc(100vh - 20px); } }
+
+.modal-body {
+  position: relative;
+  padding: 0px; }
+
+.close {
+  position: absolute;
+  right: -30px;
+  top: 0;
+  z-index: 999;
+  font-size: 2rem;
+  font-weight: normal;
+  color: #fff;
+  opacity: 1; }
 
 footer {
   background: url("../img/patterns/zwartevilt.png") repeat;
