--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -18,6 +18,11 @@ h6
 
     text-align: center
 
+.container
+    height: 100%
+    min-height: 40vmin
+    padding-bottom: 3em
+
 .hidden
     display: none
 
