--- a/src/sass/2-layouts/_testimonial.sass
+++ b/src/sass/2-layouts/_testimonial.sass
@@ -6,11 +6,12 @@
 
     @extend %text-shadow
 
-.owl-carousel
-    img
-        margin-bottom: 15px
-        max-width: 150px
-        max-height: 150px
-    p
-        font-style: italic
-        line-height: 30px
+    .testimonial-carousel
+        img
+            margin-bottom: 15px
+            max-width: 150px
+            max-height: 150px
+
+        p
+            font-style: italic
+            line-height: 30px
