Google Maps API

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -68,7 +68,7 @@ h6 {
 .color-primary {
   color: #1e7aea; }
 
-.no-space, .map {
+.no-space {
   margin-left: -15px;
   margin-right: -15px;
   padding-left: 0;
@@ -313,19 +313,13 @@ h6 {
   .blog .card {
     width: 18rem; }
 
-.map {
-  position: relative;
-  min-height: 50vmin; }
-  .map iframe {
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute; }
-
 footer {
   background: url("../img/patterns/zwartevilt.png") repeat;
   width: 100%;
   height: 300px; }
 
 /* MODULES */
+#map {
+  width: 100%;
+  height: auto;
+  min-height: 50vmin; }
