New Call To Action Section, buttons style moved to base.sass and mixins organized

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -31,14 +31,11 @@ body {
   -o-background-size: cover;
   background-size: cover; }
 
-.btn-cover-primary, .services {
+.btn-primary, .services {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
 
 .title, .subtitle, .news, .testimonial, .countup, .video {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
-
-.btn {
-  margin: 1.5em 0; }
 
 /* BASE STYLES */
 body,
@@ -86,6 +83,31 @@ h6 {
 .title-block, .cover-title {
   margin: 2em auto; }
 
+.btn-primary {
+  padding: 0.5em 2em;
+  border-color: transparent;
+  border-radius: 0.15em;
+  background-color: #1e7aea;
+  font-size: 1.2em;
+  font-weight: bold;
+  line-height: 3em; }
+  .btn-primary:hover {
+    color: white;
+    background-color: #1262c3; }
+
+.btn-outline-light {
+  margin-top: 1.5em;
+  padding: 0.5em 1.2em;
+  border-color: white;
+  border-radius: 0.1em;
+  background-color: transparent;
+  font-size: 1em;
+  line-height: 2.6em; }
+  .btn-outline-light:hover {
+    opacity: 0.7;
+    color: black;
+    background-color: white; }
+
 /* LAYOUTS */
 .navbar-trans {
   background-color: transparent; }
@@ -107,31 +129,6 @@ h6 {
   box-sizing: border-box;
   text-transform: uppercase;
   color: white; }
-
-.btn-cover-primary {
-  padding: 0.5em 2em;
-  border-color: transparent;
-  border-radius: 0.15em;
-  background-color: #1e7aea;
-  font-size: 1.2em;
-  font-weight: bold;
-  line-height: 3em; }
-  .btn-cover-primary:hover {
-    color: white;
-    background-color: #1262c3; }
-
-.btn-cover-secondary, .news-inner .btn-news-primary {
-  margin-top: 1.5em;
-  padding: 0.5em 1.2em;
-  border-color: white;
-  border-radius: 0.1em;
-  background-color: transparent;
-  font-size: 1em;
-  line-height: 2.6em; }
-  .btn-cover-secondary:hover, .news-inner .btn-news-primary:hover {
-    opacity: 0.7;
-    color: black;
-    background-color: white; }
 
 .cover-link {
   text-decoration: underline;
@@ -312,6 +309,10 @@ h6 {
   height: auto; }
   .blog .card {
     width: 18rem; }
+
+.calltoaction {
+  background: #1e7aea;
+  color: white; }
 
 footer {
   background: url("../img/patterns/zwartevilt.png") repeat;
