--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -10,3 +10,31 @@
 // Background image with layer of color on it
 =tintedImage($color, $alpha, $imgUrl)
     background-image: linear-gradient(rgba($color, $alpha), rgba($color, $alpha)), url($imgUrl)
+
+// Placeholders Mixins
+
+%heading-font
+    font-family: "Catamaran", "Helvetica", "Arial", "sans-serif"
+    font-weight: 400
+
+%body-font
+    font-family: "Open Sans", "Helvetica", "Arial", "sans-serif"
+    font-weight: 300
+
+%transition-all
+    -webkit-transition: all 0.35s
+    -moz-transition: all 0.35s
+    -o-transition: all 0.35s
+    transition: all 0.35s
+
+%background-cover
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-size: cover
+
+%box-shadow
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+
+%text-shadow
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5)
