--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -51,6 +51,11 @@ h6
 .title-block
     margin: 2em auto
 
+.btn
+    box-sizing: border-box
+    text-transform: uppercase
+    color: $cor-branca    
+
 .btn-primary
     padding: 0.5em 2em
     border-color: transparent
