--- a/src/sass/1-base/_base.sass
+++ b/src/sass/1-base/_base.sass
@@ -18,6 +18,9 @@ h6
 
     text-align: center
 
+textarea
+    resize: none
+
 .container
     height: 100%
     min-height: 40vmin
@@ -54,7 +57,7 @@ h6
 .btn
     box-sizing: border-box
     text-transform: uppercase
-    color: $cor-branca    
+    color: $cor-branca
 
 .btn-primary
     padding: 0.5em 2em
@@ -81,6 +84,6 @@ h6
     line-height: 2.6em
 
     &:hover
-        opacity: 0.7
-        color: $cor-preta
-        background-color: $cor-branca
+        background: rgba($cor-branca, 0.6)
+        color: $cor-branca
+        font-weight: bold
