--- a/src/css/app.css
+++ b/src/css/app.css
@@ -44,6 +44,7 @@ html {
   height: 100%; }
 
 body {
+  color: #11101a;
   overflow-x: hidden; }
 
 h1,
@@ -56,11 +57,6 @@ h6 {
 
 textarea {
   resize: none; }
-
-.container {
-  height: 100%;
-  min-height: 40vmin;
-  padding-bottom: 3em; }
 
 .hidden {
   display: none; }
@@ -115,6 +111,13 @@ textarea {
     background: rgba(255, 255, 255, 0.6);
     color: white;
     font-weight: bold; }
+
+.btn-outline-primary {
+  border-color: #1e7aea;
+  color: #1e7aea; }
+  .btn-outline-primary:hover {
+    background: #1e7aea;
+    color: white; }
 
 /* LAYOUTS */
 .navbar-trans {
@@ -387,10 +390,16 @@ textarea {
       color: white;
       font-weight: bold; } }
 
+.newsletter input {
+  border: 1px solid #1e7aea; }
+  .newsletter input:focus, .newsletter input:active {
+    box-shadow: 0 0 2px #1e7aea; }
+  .newsletter input::placeholder {
+    color: #11101a; }
+
 footer {
   background: url("../img/patterns/zwartevilt.png") repeat;
-  width: 100%;
-  height: 300px; }
+  width: 100%; }
 
 /* MODULES */
 #map {
